--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: forcetictactoe
-description: A sample web application
+description: An example with dart force
 dependencies:
   http: '>=0.9.0 <0.10.0'
   http_server: '>=0.9.0 <0.10.0'
