--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,6 +6,7 @@ dependencies:
   logging: '>=0.9.0 <0.10.0'
   route: '>=0.4.0 <0.5.0'
   uuid: '0.2.1'
+  stagexl: '0.8.9'
   force: 
     git: git://github.com/jorishermans/dart-force.git 
   
