--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,10 +1,9 @@
 name: forcetictactoe
+version: 0.0.1
 description: An example with dart force
 dependencies:
-  http: '>=0.9.0 <0.10.0'
-  http_server: '>=0.9.0 <0.10.0'
-  logging: '>=0.9.0 <0.10.0'
   stagexl: '0.8.9'
+  appengine: '>=0.2.1 <0.3.0'
   force: 
     git: git://github.com/ForceUniverse/dart-force.git 
   
